<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:text="" />

    <EditText
        android:id="@+id/tSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        android:text="@string/input_sum"
        android:layout_below="@+id/tInfo"
        android:layout_alignStart="@+id/tSum" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tSum"
        android:layout_below="@+id/tSum"
        android:layout_marginTop="28dp"
        android:text="@string/rub"
        android:layout_alignEnd="@+id/tSum" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="18dp"
        android:text="@string/dollar"
        android:layout_alignEnd="@+id/tSum" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="19dp"
        android:text="@string/euro"
        android:layout_alignEnd="@+id/checkBox2" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_trans"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox3"
        android:layout_below="@+id/checkBox3"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/comment" />

    <EditText
        android:id="@+id/tComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/checkBox3"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>