<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/bTransMinus">
    </Button>

    <Button
        android:id="@+id/bDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/bTransPlus">
    </Button>

    <ListView
        android:id="@+id/lvBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/bDeleteAll"
        android:layout_above="@+id/bTransMinus"
        android:layout_below="@+id/bDeleteAll"
        android:layout_alignParentStart="true">
    </ListView>

    <TextView
        android:id="@+id/tSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="" />

    <Button
        android:id="@+id/bTransMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/trans_minus"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/bTransPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trans_plus"
        android:layout_alignBaseline="@+id/bTransMinus"
        android:layout_alignBottom="@+id/bTransMinus"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="9dp" />

</RelativeLayout>